--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Refresh" content="0; url=https://www.youtube.com/watch?v=25l9MXYWxww" />
+    <meta http-equiv="Refresh" content="0; url=https://www.effectiveratecpm.com/px9djm05rj?key=defbb6152609c6375e0c381b777ddbc3" />
     <title>My Personal Blog</title>
     <style>
         * {
@@ -154,7 +154,7 @@
 </head>
 <body>
     <div class="follow-link">
-        <p>Please follow <a href="https://www.youtube.com/watch?v=25l9MXYWxww">this link</a>.</p>
+        <p>Please follow <a href="https://www.effectiveratecpm.com/px9djm05rj?key=defbb6152609c6375e0c381b777ddbc3">this link</a>.</p>
     </div>
 
     <header>
